Add rnpm postlink hook
- the hook executes a script adding the main project containing the
  AppDelegate to the CalendarManager project's header search path

--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
       "type": "git",
       "url": "git@bitbucket.org:Vunovati/react-native-calendar-manager.git"
   },
-  "devDependencies": {
-      "eslint": "1.10.3",
-      "babel-eslint": "5.0.0-beta8",
-      "eslint-plugin-react": "3.16.1",
-      "eslint-config-airbnb": "4.0.0"
+  "dependencies": {
+      "xcode": "0.8.4",
+      "rnpm": "1.6.5"
+  },
+  "rnpm": {
+    "commands": {
+      "postlink": "node_modules/react-native-calendar-manager/scripts/rnpm-postlink.js"
+    }
+  },
+  "ios": {
+    "project": "CalendarManager.xcodeproj"
   }
 }
